--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,16 @@
     "psr-4": {
       "myapp\\": "src/"
     }
+  },
+  "require-dev" : {
+    "squizlabs/php_codesniffer": "3.*",
+    "phpmd/phpmd" : "@stable"
+  },
+  "scripts": {
+    "test": [
+      "composer install",
+      "./vendor/bin/phpmd ./src/ text codesize,design,naming,unusedcode",
+      "./vendor/bin/phpcs --standard=PSR2 --colors ./src/"
+    ]
   }
 }
