--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "require-dev" : {
     "squizlabs/php_codesniffer": "3.*",
     "phpmd/phpmd" : "@stable",
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "facebook/webdriver": "1.5.*"
   },
   "scripts": {
     "lint": [
