--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
     }
   },
   "require-dev" : {
-    "squizlabs/php_codesniffer": "3.*",
-    "phpmd/phpmd" : "@stable",
-    "phpunit/phpunit": "^9.5",
+    "squizlabs/php_codesniffer": "3.5.*",
+    "phpmd/phpmd" : "2.9.*",
+    "phpunit/phpunit": "9.5.*",
     "facebook/webdriver": "1.5.*"
   },
   "scripts": {
